# llm-over-dns

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.docker  README.md  codecov.yml  docker-compose.yml  install.sh
.antigravitycli/: ec11a506-07c6-4d0f-86eb-838df97d4d66.json
.cargo/: audit.toml
.github/: BADGES.md  CI_CD.md  CODEOWNERS  GITHUB_ACTIONS_SETUP.md  QUICK_REFERENCE.md  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docker.yml  quality.yml  release.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  PROJECT_STATUS.md  README.md  app.js  configuration.md  deployment-docker.md  deployment-quickstart.md  getting_started.md  index.html  project_status.md  readme.md
docs/implementation/: DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  QA_INDEX.md  quality-assurance.md  testing-guide.md
docs/reports/: CI_CD_IMPLEMENTATION_REPORT.md  CI_CD_SETUP_SUMMARY.md  CI_CD_VERIFICATION_REPORT.txt  DOCKER_DELIVERABLES.txt  DOCKER_SETUP_SUMMARY.md  DOCKER_VALIDATION.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_SUMMARY.md  DOTENV_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QA_SETUP_SUMMARY.md
scripts/: build.sh  deploy.sh  install-git-hooks.sh  pre-commit.sh  quality-check.sh  test-coverage.sh  test.sh
src/: cache.rs  chunker.rs  config.rs  dns_handler.rs  lib.rs  llm_client.rs  main.rs  rate_limiter.rs  server.rs
tests/: integration_test.rs
(+1 files in other folders)
